[package]
name = "runison"
version = "0.1.0"
authors = ["Brian Ketelsen <mail@bjk.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
figment = { version = "0.10", features = ["toml"] }
walkdir = "2"
glob = "0.2.11"
bincode = "1.3.1"
console = "0.14.0"
indicatif = "0.15.0"