[package]
name = "runison"
version = "0.1.0"
authors = ["Brian Ketelsen <mail@bjk.fyi>"]
edition = "2018"

[[bin]]
name = "runison-server"
path = "src/server.rs"

[[bin]]
name = "runison"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tonic = { git = "https://github.com/hyperium/tonic", branch = "master", features = ["tls"] }
prost = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version =  "0.1", features = ["net"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tower = { version = "0.4" }
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
# Tracing
tracing = "0.1.16"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.7"
# Hyper example
hyper = "0.14"
warp = { git = "https://github.com/aknuds1/warp", branch = "chore/upgrade-tokio",  default-features = false }
http = "0.2"
http-body = "0.4"
pin-project = "1.0"
# Health example
tonic-health = "0.2.0"
listenfd = "0.3"
figment = { version = "0.10", features = ["toml"] }
walkdir = "2"
glob = "0.2.11"
bincode = "1.3.1"
console = "0.14.0"
indicatif = "0.15.0"
structopt = "0.3.21"

[build-dependencies]
tonic-build = { version="0.3.1", features = ["prost"] }
prost-build = "0.7.0"